Obligation development